prepare httml for lecture

--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
 
     <div class="container text-center mt-5">
       <h1> Let's AJAX! ⚔︎</h1>
-
+      
+      <button id="click-me" class="btn btn-primary btn-lg m-5">Click me!</button>
+      
       <form id="search-movies" class="form-inline d-flex justify-content-center m-5">
         <input id="keyword" type="text" class="form-control" placeholder="Find movies">
         <input id="submit" type="submit" class="btn btn-primary form-control" value="Search">
       </form>
 
-      <div class="d-flex m-5">
-        <input id="search" type="text" class="form-control" placeholder="Search places">
-      </div>
-
       <ul class="list-inline mt-5" id="results">
       </ul>
-
-      <!-- <button id="click-me" class="btn btn-primary btn-lg m-5">Click me!</button> -->
 
     </div>
 
